# luajit-cmake

./: Bundle.cmake  CMakeLists.txt  LuaJIT.cmake  Makefile  ffi.cmake  lua.cmake  lua2c.lua  luauser.h  readme.md
Modules/: FindUnwind.cmake  Findunwind.cmake
Utils/: Darwin.wine.cmake  ios.toolchain.cmake  windows.toolchain.cmake  zig.toolchain.cmake
ffi/: fficonfig.h
host/buildvm/: CMakeLists.txt
host/minilua/: CMakeLists.txt
