cmake_minimum_required(VERSION 3.0)

option(LUA_DIR "Path of Lua 5.4 source dir" OFF)
option(LUAJIT_DIR "Path of LuaJIT 2.1 source dir" OFF)

if(CMAKE_COMPILER_IS_GNUCC)
  set(LUA_TARGET_SHARED ON)
endif()
if(DEFINED ENV{LUA_TARGET_SHARED})
  set(LUA_TARGET_SHARED $ENV{LUA_TARGET_SHARED})
endif()

get_directory_property(hasParent PARENT_DIRECTORY)
if(LUAJIT_DIR)
  project(luajit)
  include(LuaJIT.cmake)
  if (hasParent)
    set(LUA_TARGET luajit PARENT_SCOPE)
    set(LUA_LIBRARIES libluajit PARENT_SCOPE)
    set(LUA_INCLUDE_DIR ${LUAJIT_DIR}/src PARENT_SCOPE)
  endif()
elseif(LUA_DIR)
  project(lua)
  include(lua.cmake)
  if (hasParent)
    set(LUA_TARGET lua PARENT_SCOPE)
    set(LUA_LIBRARIES liblua PARENT_SCOPE)
    set(LUA_INCLUDE_DIR ${LUA_DIR} PARENT_SCOPE)
  endif()
  if (WITH_LIBFFI)
    include(ffi.cmake)
    set(LUA_FFI_LIBRARIES ${LUA_FFI_LIBRARIES} PARENT_SCOPE)
  endif()
else()
  message(FATAL_ERROR "Must set LUAJIT_DIR or LUA_DIR to build with CMake")
endif()
